Fix fixed image overflowing body

--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -12,15 +12,16 @@
 html,
 body {
   min-height: 100vh;
-  height: 100%;
 }
 
 html {
   font-family: 'Oswald', sans-serif;
+  overflow-y: scroll;
 }
 
 body {
-  @apply pb-4 flex flex-col;
+  @apply flex flex-col bg-brand-dark-1;
+  overflow-y: hidden;
 }
 #root {
   @apply h-full flex-1 flex flex-col;
